--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.9",
+    "@astrojs/preact": "^3.1.1",
     "@astrojs/rss": "^4.0.5",
     "astro": "^4.5.5",
+    "preact": "^10.19.6",
     "typescript": "^5.4.2"
   }
 }
