--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
+      "@lib/*": ["lib/*"],
       "@pages/*": ["src/pages/*"],
       "@scripts/*": ["src/scripts/*"],
       "@styles/*": ["src/styles/*"]
